WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32402
Incorrect caching of prototype lookup with dictionary base
https://bugs.webkit.org/show_bug.cgi?id=32402
Summary
Incorrect caching of prototype lookup with dictionary base
Oliver Hunt
Reported
2009-12-10 17:43:57 PST
Review bug
Attachments
Patch
(5.07 KB, patch)
2009-12-10 17:51 PST
,
Oliver Hunt
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2009-12-10 17:51:13 PST
Created
attachment 44654
[details]
Patch
WebKit Review Bot
Comment 2
2009-12-10 17:55:50 PST
style-queue ran check-webkit-style on
attachment 44654
[details]
without any errors.
Oliver Hunt
Comment 3
2009-12-10 18:22:58 PST
Committed
r51976
Oliver Hunt
Comment 4
2010-01-11 15:27:47 PST
***
Bug 33450
has been marked as a duplicate of this bug. ***
Darin Adler
Comment 5
2010-01-21 14:19:51 PST
<
rdar://problem/7530708
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug