Incorrect caching of prototype lookup with dictionary base https://bugs.webkit.org/show_bug.cgi?id=32402

Reviewed by Gavin Barraclough

Make sure we don't add cached prototype lookup to the proto_list
lookup chain if the top level object is a dictionary.

Canonical link: https://commits.webkit.org/43401@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51976 268f45cc-cd09-0410-ab3c-d52691b4dbfc